test/static/tests/compile-fail/example_compile_error.rs
extern crate neon;

use neon::types::JsNumber;

fn main() {
    JsNumber::new(cx, "9000")
}
