test/static/tests/compile-fail/example_compile_error.stderr
error[E0425]: cannot find value `cx` in this scope
 --> $DIR/example_compile_error.rs:6:19
  |
6 |     JsNumber::new(cx, "9000")
  |                   ^^ not found in this scope

error[E0277]: the trait bound `f64: std::convert::From<&str>` is not satisfied
 --> $DIR/example_compile_error.rs:6:5
  |
6 |     JsNumber::new(cx, "9000")
  |     ^^^^^^^^^^^^^ the trait `std::convert::From<&str>` is not implemented for `f64`
  |
  = help: the following implementations were found:
            <f64 as std::convert::From<f32>>
            <f64 as std::convert::From<i16>>
            <f64 as std::convert::From<i32>>
            <f64 as std::convert::From<i8>>
          and 3 others
  = note: required because of the requirements on the impl of `std::convert::Into<f64>` for `&str`
  = note: required by `neon::types::JsNumber::new`

error[E0308]: mismatched types
 --> $DIR/example_compile_error.rs:6:5
  |
5 | fn main() {
  |           - expected `()` because of default return type
6 |     JsNumber::new(cx, "9000")
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^- help: try adding a semicolon: `;`
  |     |
  |     expected (), found struct `neon::handle::Handle`
  |
  = note: expected type `()`
             found type `neon::handle::Handle<'_, neon::types::JsNumber>`

Some errors have detailed explanations: E0277, E0308, E0425.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `static_tests-tests`.
